Fix margin on mobile devices.

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -419,7 +419,7 @@ a[href^=tel] {
 
 	#cv {
 		width: 95%;
-		margin: 10px auto;
+		margin: 55px auto;
 		min-width: 280px;
 	}
 	#headshot {
